--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://celia-r-revert.github.io/modulo-3-evaluacion-final-celia-r-revert",
   "scripts": {
+    "deploy": "npm run build ; gh-pages -d dist ; mv dist docs ; git add docs ; git commit 'Update GitHub Pages' ; git push ",
+    "githubpages": "npm run build ; gh-pages -d dist ; mv dist docs ; git add docs ; git commit 'Update GitHub Pages' ; git push ",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -25,6 +28,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "vite": "^6.1.0"
   }
